불변리스트 가변리스트로 수정, Boolean타입 수정